nohup.out
Traceback (most recent call last):
  File "discordbot1.py", line 12, in <module>
    import trans
  File "/home/bot/git/mc-discordbot/trans.py", line 6, in <module>
    from py_translator import Translator
  File "/usr/lib/python3.6/site-packages/py_translator/__init__.py", line 6, in <module>
    from .client import Translator
  File "/usr/lib/python3.6/site-packages/py_translator/client.py", line 13, in <module>
    from .gtoken import TokenAcquirer
  File "/usr/lib/python3.6/site-packages/py_translator/gtoken.py", line 45
    RE_TKK = re.compile(r'tkk:'([^']+)', re.DOTALL)
                                 ^
SyntaxError: invalid syntax
